Bug 1222923 - Enable MOZ_FMP4 on gonk L r=jolin